--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,9 @@ spring:
     url: ${DB-URL}
     username: ${DB-USERNAME}
     password: ${DB-PASSWORD}
-
+  redis:
+    port : 6379
+    host : localhost
   logging:
     level:
       org:
@@ -22,5 +24,9 @@ spring:
       header: ${HEADER}
       secret: ${SECRET}
       accessExp: ${ACCESS-EXP}
-      refreshExp: ${ACCESS-EXP}
+      refreshExp: ${REFRESH-EXP}
       prefix: ${PREFIX}
+bsm:
+  client-id: ${BSM_CLIENT_ID}
+  secret-key: ${BSM_SECRET_KEY}
+  redirect-url: &{BSM_REDIRECT_URL}
