--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,4 +29,4 @@ spring:
 bsm:
   client-id: ${BSM_CLIENT_ID}
   secret-key: ${BSM_SECRET_KEY}
-  redirect-url: &{BSM_REDIRECT_URL}
+  redirect-url: ${BSM_REDIRECT_URL}
